--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Antony John</h2>
               <p data-aos="fade-left" data-aos-delay="100"> System Engineer and Developer </p>
               <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a
-                  class="btn btn-light text-dark shadow-sm mt-1 me-1" href="Antony_latest_m.pdf" target="_blank">Download
+                  class="btn btn-light text-dark shadow-sm mt-1 me-1" href="Antony_latest_M.pdf" target="_blank">Download
                   CV</a><a class="btn btn-success shadow-sm mt-1" href="#contact">Hire Me</a></div>
             </div>
           </div>
@@ -259,6 +259,12 @@
                       <img
                       src="https://img.shields.io/badge/BASIC_CLOUD_NETWORKING-cyan"
                       alt="" srcset="">  
+                      <img
+                      src="https://img.shields.io/badge/FUNDAMENTALS_OF_DOCKER-violet"
+                      alt="" srcset=""> 
+                      <img
+                      src="https://img.shields.io/badge/FUNDAMENTALS_OF_KUBERNETES-yellow"
+                      alt="" srcset=""> 
 
                   </div>
                 
